added new bitrate paths to Flows API
